# DeepQ-Asset-Agent

./: .gitignore  DeepQ Portfolio Agent.sln  README.txt
Data/: 10 Fold Cross Validation.csv  DataAnalysis.ipynb  Penalty_Param_Tuning.csv  cpi_data.csv  fin_data.csv  norm_fin_data.csv  profit_loss_training.csv  returns_training.csv  simulation_len_tuning.csv  test_batch_1.csv  test_batch_2.csv  test_batch_3.csv  test_batch_4.csv  test_batch_5.csv  test_batch_6.csv  test_batch_7.csv  test_batch_8.csv  test_batch_9.csv  train_batch_1.csv  train_batch_2.csv  train_batch_3.csv  train_batch_4.csv  train_batch_5.csv  train_batch_6.csv  train_batch_7.csv  train_batch_8.csv  train_batch_9.csv  unemployement_rate.csv
DeepQ Portfolio Agent/: Agent.cpp  Agent.h  CMakeLists.txt  DeepQ Portfolio Agent.vcxproj  access_data.cpp  access_data.h  asset.cpp  asset.h  compute_average_var.h  main.cpp  test_agent.cpp  test_agent.h  to_csv.h  train_agent.cpp  train_agent.h
DeepQ Portfolio Agent/Saved_Models/: test.pt_target  train.pt_target  trained_model.pt_target
